# MonitoringSystem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  f.sh  result.txt  Диаграмма без названия.drawio
configs/: libAgentCPU.json
logs/: CpuAgent.json  NetworkAgent.json
src/: CMakeLists.txt  Makefile  cpuLoad.cc  example.json  main.cc  main.cpp  matrix_addition.cpp
src/AgentReportF/: Builder.cc  Builder.h  CMakeLists.txt  Iterator.cc  MetricParameters.h  ReportComponent.h  ReportValue.cc
src/DLL/: CMakeLists.txt  IAgentAPI.h
src/DLL/AgentAdditional/: CMakeLists.txt
src/DLL/AgentAdditional/include/: AgentAdditional.h
src/DLL/AgentAdditional/src/: AgentAdditional.cpp
src/DLL/AgentCPU/: AgentCPU.cpp  AgentCPU.h  CMakeLists.txt
src/DLL/AgentCPU/include/: AgentCPU.h
src/DLL/AgentCPU/src/: AgentCPU.cpp
src/DLL/DynamicLibsLoader/: CMakeLists.txt
src/DLL/DynamicLibsLoader/include/: DynamicLibraryLoader.h
src/DLL/DynamicLibsLoader/src/: DynamicLibraryLoader.cpp
src/DLL/PrinterAgentInfo/: CMakeLists.txt
src/DLL/PrinterAgentInfo/include/: PrinterAgentInfo.h
src/DLL/PrinterAgentInfo/src/: PrinterAgentInfo.cpp
src/EmailPrinter/: CMakeLists.txt
src/EmailPrinter/include/: EmailPrinter.h
src/EmailPrinter/src/: EmailPrinter.cpp
src/MonitoringBot/: CMakeLists.txt
src/MonitoringBot/include/: TelegramBot.h
src/MonitoringBot/src/: TelegramBot.cpp
src/model/AgentReportF/: Builder.cc  Builder.h  CMakeLists.txt  Iterator.cc  MetricParameters.h  Observer.cc  Observer.h  ReportComponent.h  ReportComposite.cc  Serializer.cc  Serializer.h
src/model/KernelLoader/: IKernelLoader.h  KernelLoader.h  KernelLoaderLibs.h
src/model/agents/: AgentReport.h  IAgent.h  InfoAgent.h  Privilege.h
src/model/agents/CPU/: CMakeLists.txt  CpuAgent.h  CpuAgentLinux.cc  CpuAgentMacOS.cc  CpuMonitoring.h  CpuMonitoring_MACos.cc
src/model/agents/Memory/: CMakeLists.txt  MemoryAgent.h  MemoryAgent.json  MemoryAgentLinux.cc  MemoryAgentMacOS.cc
src/model/agents/Network/: CMakeLists.txt  NetworkAgent.h  NetworkAgent.json  NetworkAgentMacOS.cc
src/model/agents/System/: CMakeLists.txt  SystemAgent.h  SystemAgent.json  SystemAgentMacOS.cc
src/model/agents/SystemAgent/: SystemAgent.h  SystemAgentMacOS.cc
src/test/: a.out  main.cc
